<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_menu_my_balloons"
        android:title="@string/my_balloons"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        app:showAsAction="always" />
</menu>