<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.balloons.ui.BalloonListFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/options_menu"
        app:title="@string/app_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBalloonList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        tools:listitem="@layout/item_balloon" />

</androidx.constraintlayout.widget.ConstraintLayout>