<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.balloons.ui.FavoriteBalloonsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="0dp"
        app:title="@string/my_balloons"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:elevation="4dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_favorite_balloon"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>